# game-art-pipeline

./: pyproject.toml
docs/: test-report-ghibli-souls-lasers.md
game_art/: __init__.py  batch.py  cli.py  config.py
game_art/generators/: sprite.py
game_art/pipeline/: __init__.py  prompts.py  validation.py
game_art/processing/: background.py  cleanup.py  orientation.py  palette.py  pivot.py  resize.py
game_art/providers/: __init__.py  base.py  comfyui.py  placeholder.py  sdwebui.py
game_art/styles/: base.py  pixel_art.py
tests/: test_background.py  test_generator.py  test_processing.py  test_providers.py  test_styles.py
workflows/: img2img.json  txt2img.json  txt2img_rembg.json
